remove unused import statement